// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler > asterisk sign > default name 1`] = `
{
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "*model-value",
    "start": {
      "column": 8,
      "line": 1,
      "offset": Infinity,
    },
  },
  "name": "*model-value",
  "type": 6,
  "value": {
    "content": "modelValue",
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "source": "\\"modelValue\\"",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": 2,
  },
}
`;

exports[`compiler > asterisk sign > w/ name 1`] = `
{
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "*foo",
    "start": {
      "column": 8,
      "line": 1,
      "offset": Infinity,
    },
  },
  "name": "*foo",
  "type": 6,
  "value": {
    "content": "foo",
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "source": "\\"foo\\"",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": 2,
  },
}
`;

exports[`compiler > dollar sign > default name 1`] = `
{
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "$model-value",
    "start": {
      "column": 8,
      "line": 1,
      "offset": Infinity,
    },
  },
  "name": "$model-value",
  "type": 6,
  "value": {
    "content": "modelValue",
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "source": "\\"modelValue\\"",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": 2,
  },
}
`;

exports[`compiler > dollar sign > w/ name 1`] = `
{
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "$foo",
    "start": {
      "column": 8,
      "line": 1,
      "offset": Infinity,
    },
  },
  "name": "$foo",
  "type": 6,
  "value": {
    "content": "foo",
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "source": "\\"foo\\"",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": 2,
  },
}
`;

exports[`compiler > double bind > default name 1`] = `
{
  "arg": {
    "constType": 3,
    "content": ":model-value",
    "isStatic": true,
    "loc": {
      "end": {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": ":model-value",
      "start": {
        "column": 9,
        "line": 1,
        "offset": Infinity,
      },
    },
    "type": 4,
  },
  "exp": {
    "constType": 0,
    "content": "_ctx.modelValue",
    "isStatic": false,
    "loc": {
      "end": {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "modelValue",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 9,
      },
    },
    "type": 4,
  },
  "loc": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "::model-value",
    "start": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "modifiers": [],
  "name": "bind",
  "type": 7,
}
`;

exports[`compiler > double bind > w/ name 1`] = `
{
  "arg": {
    "constType": 3,
    "content": ":foo",
    "isStatic": true,
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": ":foo",
      "start": {
        "column": 9,
        "line": 1,
        "offset": Infinity,
      },
    },
    "type": 4,
  },
  "exp": {
    "constType": 0,
    "content": "_ctx.foo",
    "isStatic": false,
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": "foo",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 9,
      },
    },
    "type": 4,
  },
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "::foo",
    "start": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "modifiers": [],
  "name": "bind",
  "type": 7,
}
`;

exports[`compiler > short bind > default name 1`] = `
{
  "arg": {
    "constType": 3,
    "content": "value",
    "isStatic": true,
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "source": "value",
      "start": {
        "column": 9,
        "line": 1,
        "offset": Infinity,
      },
    },
    "type": 4,
  },
  "exp": {
    "constType": 0,
    "content": "_ctx.value",
    "isStatic": false,
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "source": "value",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 8,
      },
    },
    "type": 4,
  },
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": ":value",
    "start": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "modifiers": [],
  "name": "bind",
  "type": 7,
}
`;

exports[`compiler > short bind > w/ name 1`] = `
{
  "arg": {
    "constType": 3,
    "content": "foo",
    "isStatic": true,
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "source": "foo",
      "start": {
        "column": 9,
        "line": 1,
        "offset": Infinity,
      },
    },
    "type": 4,
  },
  "exp": {
    "constType": 0,
    "content": "_ctx.foo",
    "isStatic": false,
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "source": "foo",
      "start": {
        "column": 8,
        "line": 1,
        "offset": 8,
      },
    },
    "type": 4,
  },
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": ":foo",
    "start": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "modifiers": [],
  "name": "bind",
  "type": 7,
}
`;
